# actix-otel-grafana-rs

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yaml  tempo-config.yaml
provisioning/dashboards/: rust_application_dashboard.json
provisioning/datasources/: datasource.yaml
src/: main.rs
