[package]
name = "actix-otel-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-otel-rs"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
actix-web-opentelemetry = { version = "0.18.0", features = ["metrics"] }
opentelemetry = { version = "0.24.0", features = ["metrics", "trace"] }
opentelemetry-otlp = {  version = "0.17.0", features = ["tonic"] }
opentelemetry-stdout = "0.5.0"
opentelemetry-http = "0.13.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"]}
tracing-opentelemetry = "0.25.0"